--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  background-color: #364497;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
